added nav custom and use random bg

--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -1,5 +1,12 @@
 {
     "bannerTitle":"তুমি কি শিখতে চাও?",
     "description":"আমরা দুনিয়া নিয়ে খুব খুশি",
-    "ecosystem":"বাস্তুতন্ত্র কি?"
+    "ecosystem":"বাস্তুতন্ত্র কি?",
+    "olympiad1":"জীববিজ্ঞান অলিম্পিয়াড",
+    "sign":"নিবন্ধন ফ্রি",
+    "courses":"পাঠ্যধারাগুলি",
+    "programsCategory":"প্রোগ্রাম বিভাগ",
+    "readingMaterials":"পড়ার উপকরণ",
+    "search":"তুমি কি শিখতে চাও ?"
+
 }
