--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,12 @@
 {
     "bannerTitle":"What do you want to learn?",
     "description":"We are very happy with the world",
-    "ecosystem":"What is ecosystems?"
+    "ecosystem":"What is ecosystems?",
+    "olympiad1":"Biology Olympiad",
+    "sign":"Register Free",
+    "courses":"Courses",
+    "programsCategory":"Programs Category",
+    "readingMaterials":"Reading Materials",
+    "search":"What do you want to learn ?"
+
 }
