added nav custom and use random bg

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,11 +2,11 @@
     "bannerTitle":"What do you want to learn?",
     "description":"We are very happy with the world",
     "ecosystem":"What is ecosystems?",
-    "olympiad1":"Biology Olympiad",
+    "olympiad1":"Biology-Olympiad",
     "sign":"Register Free",
     "courses":"Courses",
-    "programsCategory":"Programs Category",
-    "readingMaterials":"Reading Materials",
+    "programsCategory":"Programs-Category",
+    "readingMaterials":"Reading-Materials",
     "search":"What do you want to learn ?"
 
 }
