working on footer js file

--- a/public/locales/bn/translation.json
+++ b/public/locales/bn/translation.json
@@ -3,7 +3,7 @@
     "description":"আমরা দুনিয়া নিয়ে খুব খুশি",
     "ecosystem":"বাস্তুতন্ত্র কি?",
     "olympiad1":"জীববিজ্ঞান-অলিম্পিয়াড",
-    "sign":"নিবন্ধন ফ্রি",
+    "sign":"সংযুক্ত",
     "courses":"পাঠ্যধারাগুলি",
     "programsCategory":"প্রোগ্রাম-বিভাগ",
     "readingMaterials":"পড়ার-উপকরণ",
