--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -3,7 +3,7 @@
     "description":"We are very happy with the world",
     "ecosystem":"What is ecosystems?",
     "olympiad1":"Biology-Olympiad",
-    "sign":"Register Free",
+    "sign":"Join",
     "courses":"Courses",
     "programsCategory":"Programs-Category",
     "readingMaterials":"Reading-Materials",
